--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "i": "^0.3.6",
+    "install": "^0.12.1",
     "jest": "20.0.4",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "npm": "^6.4.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -46,6 +49,7 @@
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
     "react-froala-wysiwyg": "^2.8.5",
+    "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "recompose": "^0.30.0",
